[package]
name = "mqtt_logger"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
acap-dirs = { git = "https://github.com/AxisCommunications/acap-rs.git", rev = "82b12f37b0dd5c756a74851a949b1d5c3567ab1e" }
acap-logging = "0.1.0"
anyhow = "1.0.93"
futures = "0.3.31"
log = "0.4.22"
paho-mqtt = "0.12.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tempfile = "3.5.0"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread", "time"] }

[profile.release]
opt-level = "s"
strip = "symbols"
lto = true
codegen-units = 1
